--- a/src/Component/Button.css
+++ b/src/Component/Button.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 body {
-    background: linear-gradient(to bottom, #f576fc 0%, #362f36 100%);
+    background: linear-gradient(to bottom, #76f5fc 0%, #362f36 100%);
     height: 100vh;
 }
 
@@ -25,14 +25,14 @@ body {
 }
 
 .btn:hover {
-    background-color: rgb(45, 44, 43);
+    background-color: rgb(52, 53, 54);
     color: white;
 }
 
 .btn-box {
     height: 350px;
     width: 500px;
-    background: linear-gradient(to bottom, #e15dea 0%, #433039 100%);
+    background: linear-gradient(to bottom, #0baae3 0%, #816974 100%);
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     padding: 40px;
